2003-12-16  Andy <andyp@users.sf.net>

	* bumped to version 2.0.rc1


2003-12-15  Terry <tbiggs@users.sf.net>

	* fixed bug 860510
	* enabled footnote hints for osis modules


2003-12-14  Terry <tbiggs@users.sf.net>

	* added support for preverse headings
	* updated fr_FR.po from Dominique Corbex <dominique.corbex@wanadoo.fr>
	* applied patch from Dominique Corbex 


2003-12-13  Terry <tbiggs@users.sf.net>

	* Made editors use dialogs - removed options
	* editors toolbar are shown - removed options
	* fixed spacing for checkbuttons in setup_druid.


2003-12-13  Pierre <pierrebenz@users.sf.net>

	* updated manual


2003-12-12  Terry <tbiggs@users.sf.net>

	* made preferences dialog instant apply and replaced the apply, ok and
	  cancel buttons with a close button
	* updated spell check dialog


2003-12-10  Andy <andyp@users.sf.net>

	* fix bug reporting URL in configure.in (the project is not hosted at 
	  gnome.org.... yet...)
	* updated spec file
	* fixed e-mail addresses in various files
	

2003-12-10  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev19
	* added get_sword_locale() to backend/sword.cpp to help with the
	  books of the bible problem.
	* added de_DE.po and fr_FR.po to make gettext happy


2003-12-09  Andy <andyp@users.sf.net>

	* added manual to the build. Sweeping changes to the doc/ directory. 
	  Plus, we now depend on scrollkeeper.
	* updated .spec file for more prereqs and scrollkeeper scripts, use
	  generic prefixes per GNOME packaging examples
	* added COPYING-DOCS file
	* updated POTFILES.in to include all source files in src/gnome2
	* added en_GB translation
	* updated typewriter icon to a nice PNG
	* more work on fixing deprecated GNOME / GTK calls
	* reworked the way we do Pango text to make translations easier


2003-12-08  Andy <andyp@users.sf.net>

	* removed old html docs files - they were empty anyway
	* clarified purpose of src/gnome2/dummy.cpp and src/gnome/dummy.cpp.