@@ -145,6 +145,92 @@ char *get_module_name(void)
 	}
 	return NULL;
 }
+char *get_crossref(char *note)
+{
+	gchar *buf = NULL;
+	gchar *token;
+	gchar *type;
+	gchar *note_number;
+	gchar *key;
+	
+	token = strtok(note, ".");
+	if(token)
+		key = g_strdup(token);
+	else 
+		return NULL;
+	token = strtok(NULL, ".");
+	if(token)
+		type = g_strdup(token);
+	else 
+		return NULL;
+	token = strtok(NULL, ".");
+	if(token)
+		note_number = strdup(token);
+	else 
+		return NULL;
+	buf = backend_get_crossref(
+		xml_get_value("modules", "bible"), 
+		key, note_number);		
+	g_free(type);
+	g_free(key);
+	g_free(note_number);
+	if(buf) 
+		return buf;
+	else
+		return NULL;
+}
+/******************************************************************************
+ * Name
+ *   get_footnote_type
+ *
+ * Synopsis
+ *   #include "main/module.h"
+ *
+ *   char *get_footnote_type(char *note)
+ *
+ * Description
+ *   
+ *
+ * Return value
+ *   char*
+ */
+
+const char *get_footnote_type(char *module_name,
+				char *tkey, char *note)
+{	
+	const gchar *buf = NULL;
+	gchar *token;
+	gchar *type;
+	gchar *note_number;
+	gchar *key;
+	
+	token = strtok(note, ".");
+	if(token)
+		key = g_strdup(token);
+	else 
+		return NULL;
+	token = strtok(NULL, ".");
+	if(token)
+		type = g_strdup(token);
+	else 
+		return NULL;
+	token = strtok(NULL, ".");
+	if(token)
+		note_number = strdup(token);
+	else 
+		return NULL;
+	buf = backend_get_footnote_type(
+		xml_get_value("modules", "bible"), 
+		key, note_number);		
+	g_free(type);
+	g_free(key);
+	g_free(note_number);
+	if(buf) 
+		return buf;
+	else
+		return NULL;
+	//return backend_get_footnote_type(module_name, key, note);
+}
 
 /******************************************************************************
  * Name
