@@ -1,3 +1,10 @@
+2003-12-17  Terry <tbiggs@users.sf.net>
+
+	* clicking on verse in verse list (sidebar or search_dialog) now
+	  displays verse in main text pane.
+	* fixed bug - Greek and Hebrew module not saved in setup_druid.
+	  
+
 2003-12-16  Andy <andyp@users.sf.net>
 
 	* bumped to version 2.0.rc1
